# asam_ods_exd_api_pandascsv

./: .gitignore  Dockerfile  README.md  __init__.py  example_access_exd_api.ipynb  exd_api_server.py  exd_api_simple.py  exd_api_simple_impl.py  exd_file_simple.py  exd_file_simple_interface.py  external_data_file.py  external_data_pandas.py  external_data_reader.py  external_file_data.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
data/: example.csv  example_no_header.csv  example_semicolon.csv  not_my_file1.csv  not_my_file2.csv
tests/: mock_servicer_context.py  test_docker_integration.py  test_exd_api.py  test_exd_api_etc.py  test_pdcsv.py
