[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asam-ods-exd-api-pandascsv"
version = "0.5.2"
description = "ASAM ODS EXD API plugin that uses pandas to read CSV files."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "totonga"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.4.1,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "ods-exd-api-box>=1.2.1,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0",
    "isort>=5.12",
    "jupyterlab>=4.0",
    "mypy>=1.5",
    "types-protobuf",
    "types-grpcio"
]

[project.urls]
Homepage = "https://github.com/totonga/asam_ods_exd_api_pandascsv"

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring",
]

[tool.pylint.format]
max-line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.black]
line-length = 119

[tool.flake8]
extend-ignore = ["E203"]
max-line-length = 119

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "grpc"
ignore_missing_imports = true
